[skk] ..emm. state that the custom configuration contains rule.

--- a/src/fcitx-skk.conf.in
+++ b/src/fcitx-skk.conf.in
@@ -6,5 +6,5 @@ Category=InputMethod
 Enabled=True
 Library=fcitx-skk.so
 Type=SharedLibrary
-SubConfig=Dictionary:native:skk/dictionary_list,fcitx-skk:domain
+SubConfig=Dictionary and Rule:native:skk/dictionary_list,fcitx-skk:domain
 IMRegisterMethod=ConfigFile
