--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,18 +1,19 @@
-include_directories(${FCITX4_FCITX_INCLUDE_DIRS})
-include_directories(${FCITX4_FCITX_CONFIG_INCLUDE_DIRS})
-include_directories(${FCITX4_FCITX_UTILS_INCLUDE_DIRS})
-include_directories(${LIBSKK_INCLUDE_DIRS})
-link_directories(${LIBSKK_LIBRARY_DIRS})
 
-set(fcitx_skk_sources
-  skk.c skk-config.c)
-fcitx_add_addon_full(skk
-  DESC
-  SOURCES ${fcitx_skk_sources}
-  IM_CONFIG skk.conf
-  LINK_LIBS ${LIBSKK_LIBRARIES}
-  EXTRA_PO skk.h)
+set(SKK_SOURCES
+    skk.cpp
+)
+add_library(skk MODULE ${SKK_SOURCES})
+target_link_libraries(skk
+    Fcitx5::Core
+    Fcitx5::Config
+    LibSKK
+)
+set_target_properties(skk PROPERTIES PREFIX "")
+install(TARGETS skk DESTINATION "${CMAKE_INSTALL_LIBDIR}/fcitx5")
+#fcitx5_translate_desktop_file(skk.conf.in skk.conf)
+#install(FILES "${CMAKE_CURRENT_BINARY_DIR}/skk.conf" "${CMAKE_CURRENT_BINARY_DIR}/shuangpin.conf" DESTINATION "${CMAKE_INSTALL_DATADIR}/fcitx5/inputmethod")
+#fcitx5_translate_desktop_file(skk-addon.conf.in skk-addon.conf)
+#install(FILES "${CMAKE_CURRENT_BINARY_DIR}/skk-addon.conf" RENAME skk.conf DESTINATION "${FCITX_INSTALL_PKGDATADIR}/addon")
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/dictionary_list.in ${CMAKE_CURRENT_BINARY_DIR}/dictionary_list @ONLY)
-
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/dictionary_list rule DESTINATION "${FCITX4_PREFIX}/share/fcitx/skk")
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/dictionary_list rule DESTINATION "share/fcitx5/skk")
