Add i18n and make config file compatible with fcitx5.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include(FeatureSummary)
 
 find_package(PkgConfig REQUIRED)
 find_package(Fcitx5Core REQUIRED)
+find_package(Gettext REQUIRED)
 pkg_check_modules(GObject2 IMPORTED_TARGET "gobject-2.0" REQUIRED)
 find_package(LibSKK REQUIRED)
 
