use cmake install path

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,2 +1,1 @@
-install(FILES skk.png DESTINATION share/icons/hicolor/64x64/apps RENAME fcitx-skk.png)
-install(FILES skk.png DESTINATION share/fcitx/imicon)
+install(FILES skk.png DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/64x64/apps" RENAME fcitx-skk.png)
