--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,4 +17,4 @@ fcitx5_translate_desktop_file(skk-addon.conf.in skk-addon.conf)
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/skk-addon.conf" RENAME skk.conf DESTINATION "${FCITX_INSTALL_PKGDATADIR}/addon")
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/dictionary_list.in ${CMAKE_CURRENT_BINARY_DIR}/dictionary_list @ONLY)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/dictionary_list rule DESTINATION "share/fcitx5/skk")
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/dictionary_list rule DESTINATION "${FCITX_INSTALL_PKGDATADIR}/skk")
