--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,4 +35,9 @@ add_subdirectory(src)
 add_subdirectory(data)
 add_subdirectory(gui)
 
+fcitx5_translate_desktop_file(org.fcitx.fcitx5-skk.metainfo.xml.in
+                              org.fcitx.fcitx5-skk.metainfo.xml XML)
+
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/org.fcitx.fcitx5-skk.metainfo.xml" DESTINATION ${CMAKE_INSTALL_DATADIR}/metainfo)
+
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
