--- a/org.fcitx.Fcitx5.Addon.Skk.metainfo.xml.in
+++ b/org.fcitx.Fcitx5.Addon.Skk.metainfo.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <component type="inputmethod">
-  <id>org.fcitx.fcitx5-skk</id>
+  <id>org.fcitx.Fcitx5.Addon.Skk</id>
   <extends>org.fcitx.Fcitx5.desktop</extends>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0+</project_license>
