rename icon for flatpak

--- a/data/CMakeLists.txt
+++ b/data/CMakeLists.txt
@@ -1,1 +1,3 @@
-install(FILES skk.png DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor/64x64/apps" RENAME fcitx-skk.png)
+install(DIRECTORY 64x64 DESTINATION "${CMAKE_INSTALL_DATADIR}/icons/hicolor"
+        PATTERN .* EXCLUDE
+        PATTERN *~ EXCLUDE)
