--- a/src/skk-addon.conf.in.in
+++ b/src/skk-addon.conf.in.in
@@ -2,6 +2,7 @@
 Name=Skk
 Comment=Skk Input Method For Fcitx
 Category=InputMethod
+Version=@PROJECT_VERSION@
 Library=skk
 Type=SharedLibrary
 OnDemand=True
