--- a/src/skk-addon.conf.in.in
+++ b/src/skk-addon.conf.in.in
@@ -1,6 +1,6 @@
 [Addon]
-Name=Skk
-Comment=Skk Input Method For Fcitx
+Name=SKK
+Comment=SKK Input Method For Fcitx
 Category=InputMethod
 Version=@PROJECT_VERSION@
 Library=skk
