--- a/org.fcitx.Fcitx5.Addon.Skk.metainfo.xml.in
+++ b/org.fcitx.Fcitx5.Addon.Skk.metainfo.xml.in
@@ -10,6 +10,7 @@
   <url type="bugtracker">https://github.com/fcitx/fcitx5-skk/issues</url>
   <project_group>Fcitx</project_group>
   <releases>
+    <release version="5.1.1" date="2024-01-02"/>
     <release version="5.1.0" date="2023-08-14"/>
     <release version="5.0.15" date="2023-03-10"/>
     <release version="5.0.14" date="2022-11-19"/>
