--- a/org.fcitx.Fcitx5.Addon.Skk.metainfo.xml.in
+++ b/org.fcitx.Fcitx5.Addon.Skk.metainfo.xml.in
@@ -6,8 +6,12 @@
   <project_license>GPL-3.0+</project_license>
   <name>SKK</name>
   <summary>SKK Japanese input method</summary>
+  <developer id="org.fcitx-im">
+      <name>The Fcitx Team</name>
+  </developer>
   <url type="homepage">https://fcitx-im.org</url>
   <url type="bugtracker">https://github.com/fcitx/fcitx5-skk/issues</url>
+  <url type="vcs-browser">https://github.com/fcitx/fcitx5-skk</url>
   <project_group>Fcitx</project_group>
   <releases>
     <release version="5.1.2" date="2024-02-28"/>
