--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -47,15 +47,14 @@ jobs:
         uses: actions/cache@v4
         with:
           path: 'fcitx5/**/*.tar.*'
-          key: ${{ runner.os }}-${{ hashFiles('fcitx5/src/modules/spell/CMakeLists.txt')
-            }}
+          key: ${{ runner.os }}-${{ hashFiles('fcitx5/src/modules/spell/CMakeLists.txt') }}
       - name: Build and Install fcitx5
         uses: fcitx/github-actions@cmake
         with:
           path: fcitx5
           cmake-option: >-
             -DENABLE_KEYBOARD=Off -DENABLE_X11=Off -DENABLE_WAYLAND=Off -DENABLE_ENCHANT=Off
-            -DENABLE_DBUS=Off -DENABLE_SERVER=Off -DENABLE_EMOJI=Off -DUSE_SYSTEMD=Off
+            -DENABLE_DBUS=Off -DENABLE_SERVER=Off -DENABLE_EMOJI=Off -DUSE_SYSTEMD=Off -DENABLE_TEST=Off
       - uses: actions/checkout@v4
         with:
           repository: fcitx/fcitx5-qt
